# Web-Risk-Intelligence-System

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COMPLETION_CHECKLIST.md  DOCKER_GUIDE.md  Dockerfile  FLOW_DIAGRAM.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTORED_README.md  SUMMARY.md  SWAGGER_IMPLEMENTATION.md  SWAGGER_QUICKSTART.md  SWAGGER_TESTING_GUIDE.md  SWAGGER_VISUAL_GUIDE.md  WELCOME.txt  docker-compose.yml  main_api.py  main_cli.py  postman_collection.json  pyproject.toml  requirements.in  requirements.txt  run_api.sh  run_cli.sh  setup.sh  test_api.sh  test_api_swagger.py  test_refactored_api.sh  test_refactored_cli.sh
app/: __init__.py
app/api/: main.py  routes.py
app/cli/: main.py
app/collectors/: dns_collector.py  lexical_analyzer.py  ssl_collector.py  whois_collector.py
app/core/: config_loader.py  engine.py  models.py  risk_engine.py  validators.py
app/services/: analyzer_service.py
config/: settings.py  settings.yaml
core/: mock_data.py  risk_engine.py
models/: intelligence.py
tests/: test_api.py  test_risk_engine.py  test_validators.py
utils/: validator.py
